--- a/src/CalendarGUI.form
+++ b/src/CalendarGUI.form
@@ -19,7 +19,7 @@
       <grid id="2106c" binding="calendarPanel" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -36,7 +36,9 @@
           </component>
           <component id="3cdd3" class="javax.swing.JButton" binding="left">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <maximum-size width="50" height="-1"/>
+              </grid>
             </constraints>
             <properties>
               <text value="⬅"/>
@@ -44,7 +46,9 @@
           </component>
           <component id="ea71b" class="javax.swing.JButton" binding="right">
             <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <maximum-size width="50" height="-1"/>
+              </grid>
             </constraints>
             <properties>
               <text value="➡"/>
@@ -60,15 +64,15 @@
           </component>
           <component id="84279" class="javax.swing.JTable" binding="calendarDisplay">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="2" indent="1" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
+              <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="1" use-parent-layout="false">
+                <preferred-size width="300" height="100"/>
               </grid>
             </constraints>
             <properties/>
           </component>
         </children>
       </grid>
-      <grid id="b2969" binding="sidePanel" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b2969" binding="sidePanel" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -76,22 +80,9 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="4a150" class="javax.swing.JButton" binding="addEvent">
-            <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Add"/>
-            </properties>
-          </component>
-          <vspacer id="24f7d">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
           <component id="6db85" class="javax.swing.JTextField" binding="eventMon">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="5" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="100" height="-1"/>
                 <maximum-size width="100" height="-1"/>
               </grid>
@@ -104,7 +95,7 @@
           </component>
           <component id="1717f" class="javax.swing.JTextField" binding="eventDay">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="5" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="100" height="-1"/>
                 <maximum-size width="100" height="-1"/>
               </grid>
@@ -117,7 +108,7 @@
           </component>
           <component id="575be" class="javax.swing.JTextField" binding="eventYear">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="100" height="-1"/>
                 <maximum-size width="100" height="-1"/>
               </grid>
@@ -128,14 +119,16 @@
               <toolTipText value="Year"/>
             </properties>
           </component>
+          <component id="4a150" class="javax.swing.JButton" binding="addEvent">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Add"/>
+            </properties>
+          </component>
         </children>
       </grid>
-      <component id="7eb9d" class="javax.swing.JSeparator">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
     </children>
   </grid>
 </form>
