--- a/src/CalendarGUI.form
+++ b/src/CalendarGUI.form
@@ -87,13 +87,13 @@
           <component id="6db85" class="javax.swing.JTextField" binding="eventMon">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="50" height="-1"/>
+                <preferred-size width="70" height="-1"/>
                 <maximum-size width="100" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <font name="Inter"/>
-              <text value="Month"/>
+              <text value="Month Num"/>
               <toolTipText value=""/>
             </properties>
           </component>
