--- a/src/CalendarGUI.form
+++ b/src/CalendarGUI.form
@@ -13,7 +13,7 @@
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Insert App Name here: "/>
+          <text value="Creative Calendar App Name"/>
         </properties>
       </component>
       <grid id="2106c" binding="calendarPanel" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
